--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
 :root {
   --background: #171717;
   --foreground: #ffffff;
+  --black: #000;
+  --black-100: #000319;
 }
 
 @theme inline {
@@ -10,6 +12,19 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --animate-spotlight: spotlight 2s ease 0.75s 1 forwards;
+}
+
+@keyframes spotlight {
+  0% {
+    opacity: 0;
+    transform: translate(-72%, -62%) scale(0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -40%) scale(1);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +35,7 @@
 }
 
 body {
-  background: var(--background);
+  background: var(--black-100);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
