--- a/app/globals.css
+++ b/app/globals.css
@@ -81,3 +81,10 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.heading {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  
+}
